<resources>
    <string name="app_name">ChamaSolution</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="onboarding_get_started">Get Started</string>
    <string name="onboarding_skip">Skip</string>
    <string name="landing_activity_welcome_to">Welcome To</string>
    <string name="landing_page_login">Login</string>
    <string name="landing_activity_sign_up">Register</string>
    <string name="landing_activity_terms_label">By tapping Sign into ChamaApp, Create Account, I agree to Terms of Service, Privacy Policy and Wallet Terms of Use.</string>
    <string name="landing_page_terms_of_use_prompt">Read Terms Of Use</string>
    <string name="login_password_prompt">Enter Password</string>
    <string name="login_email_phone_prompt">Enter Email/Phone Number</string>
    <string name="login_login_text">Login</string>
    <string name="login_login_title">Log in</string>
    <string name="login_forgot_password">Forgot Password</string>
    <string name="signup_one_continue">Continue</string>
    <string name="signup_email_prompt">Email</string>
    <string name="signup_date_of_birth_prompt">Date Of Birth</string>
    <string name="signup_select_gender_prompt">Select Gender</string>
    <string name="signup_other_names_prompt">Other Names</string>
    <string name="signup_surname_prompt">Surname</string>
    <string name="singup_activity_title">Register With ChamaApp</string>
    <string name="sign_in_two_sample_country_code_254">+254</string>
    <string name="sign_in_two_sample_nationality">Select Nationality</string>
    <string name="sign_in_two_national_id_number">National ID Number</string>
    <string name="verification_enter_verification_code">Enter Verification Code</string>
    <string name="verification_code_please_enter_verification_code_sent_to">Please enter verification code sent to</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="verification_successful_confirm_password">Confirm Password</string>
    <string name="verification_successful_enter_password">Enter Password</string>
    <string name="verification_successful_thank_you_for_sign_into_chamaapp_the_easy_way_to_manage_and_track_group_saving_investing_and_loans">Thank you for sign into ChamaApp. The easy way to manage and track group Saving, Investing and Loans.</string>
    <string name="verification_successful_verification_successful">Verification Successful</string>
    <string name="sign_up_two_mobile_phone_number">Mobile Phone Number</string>
    <string name="sign_up_two_sample_country">Kenya</string>
    <string name="select_country_title">Select Country</string>
    <string name="sign_up_one_error_select_gender">Select Gender</string>
    <string name="select_nationality_title">Select Nationality</string>
    <string name="error_no_surname">Provide surname</string>
    <string name="error_no_other_names">Provide your other names</string>
    <string name="error_no_gender">Provide gender</string>
    <string name="error_no_date_of_birth">Provide date of birth</string>
    <string name="error_no_email">Provide Email</string>
    <string name="error_provide_email">Provide Email</string>
    <string name="error_no_phone_number">Provide phone number</string>
    <string name="error_no_nationality">Select Nationality</string>
    <string name="error_no_id_number">Provide national id number</string>
    <string name="error_no_selected_country">Select Country</string>
    <string name="digitised_bookkeeping" translatable="false">DIGITISED BOOKKEEPING</string>
    <string name="immutable_ledger_and_enhanced_security" translatable="false">IMMUTABLE LEDGER \u0026 ENHANCED SECURITY</string>
    <string name="group_based_identity" translatable="false">GROUP BASED IDENTITY</string>
    <string name="group_governance_and_transparency" translatable="false">GROUP GOVERNANCE \u0026 TRANSPARENCY</string>
    <string name="innvitation_reject">Reject</string>
    <string name="invitation_accept">Accept</string>
    <string name="invitation_you_were_added">You were added</string>
    <string name="invitation_eclectics_support_group">Eclectics Support Group</string>
    <string name="invite_new_group">New Group</string>
    <string name="invite_create_new_group_and_invite_members">Create New Group And Invite Members</string>
    <string name="invite_title">Group</string>
    <string name="invite_subtitle"><![CDATA[Create group & accept group invites]]></string>
    <string name="error_verification_complete_short_password">Provide a password whose length is 8 or more</string>
    <string name="error_verification_complete_passwords_do_not_match">The password do not match</string>
    <string name="permission_request_title">Permission Needed</string>
    <string name="permission_request_body_message">ChamaApp needs to read message from your phone to read One Time Password (OTP)</string>
    <string name="new_group_sample_phone_number">0703568132</string>
    <string name="new_group_sample_name">David Njuguna</string>
    <string name="new_group_title">Create New Group</string>
    <string name="new_group_subtitle">Select Contacts</string>
    <string name="group_name_selected_contacts_count">6 Selected contacts</string>
    <string name="group_name_save_group">Save Group</string>
    <string name="continue_nex">Continue</string>
    <string name="create_group">Create Group</string>
    <string name="assign_group_roles">Assign Group Roles</string>
    <string name="assign_member">Assign Member</string>
    <string name="secretary">Secretary</string>
    <string name="treasurer">Treasurer</string>
    <string name="chairperson">Chairperson</string>
    <string name="upload_legal_documents">Upload Legal Documents</string>
    <string name="add_a_document">Add A Document</string>
    <string name="invite_members">Invite Members</string>
    <string name="pdf_16_sep_18">*.pdf | 16 Sep 18</string>
    <string name="eclectics_international_constitution">Eclectics International Constitution</string>
    <string name="member">Member</string>
    <string name="add_account_title">Add Account</string>
    <string name="permission_to_save_new_contact">Permission to write new contact needed to help you add you them to a group</string>
    <string name="type_group_name">Enter Group Name</string>
    <string name="type_of_group">Type Of Group</string>
    <string name="select_country">Select Country</string>
    <string name="town_city">Town/City</string>
    <string name="add_members">Add Members</string>
    <string name="pick_a_date">Pick A Date</string>
    <string name="reminder">Reminder</string>
    <string name="_01_sep_2018_20_sep_2018_member_10_2789_00_day_reminder_03_07am">01 Sep 2018 - 20 Sep 2018 @Member 10, 2789.00/ Day Reminder: 03:07am</string>
    <string name="date_achieved">Date Achieved</string>
    <string name="penalties">Penalties</string>
    <string name="pick_a_schedule">Pick A schedule</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="amount_per_member">Amount Per Member</string>
    <string name="any_amount">Any Amount</string>
    <string name="fixed_amount">Fixed Amount</string>
    <string name="individual_contribution">Individual Contribution</string>
    <string name="select_type">Select Type</string>
    <string name="target_amount">Target Amount</string>
    <string name="name">Name</string>
    <string name="track_savings_in_one_account">Track Savings In One Account</string>
    <string name="sacco_account">Sacco Account</string>
    <string name="mobile_money">Mobile Money</string>
    <string name="keep_an_update_of_mobile_money">Keep an Update of Mobile Money</string>
    <string name="petty_cash">Petty Cash</string>
    <string name="track_petty_cash_in_one_place">Track Petty Cash In One Place</string>
    <string name="investment">Investment</string>
    <string name="monitor_investment_portifolio">Monitor Investment Portifolio</string>
    <string name="view_account">View Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="save">Save</string>
    <string name="create_contributions_title">Create contribution</string>
    <string name="skip">Skip</string>
    <string name="group_configurations">Group configurations</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="welcome_string">Welcome Joseph</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="wallet_balance_sample">50,750.00</string>
    <string name="kes">KES</string>
    <string name="deposit_money">Deposit Money</string>
    <string name="fund_transfer">Fund Transfer</string>
    <string name="error_provide_group_name">Provide Group Name</string>
    <string name="error_select_group_type">Select group type</string>
    <string name="error_select_country">Select Country</string>
    <string name="error_provide_city">Provide city</string>
    <string name="account_number">Account Number</string>
    <string name="bussiness_number">Business Number</string>
    <string name="business_name">Business Name</string>
    <string name="withdraw_request">Withdraw Request</string>
    <string name="_5000">5000</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="you_are_about_to_withdraw_the_following_amount">You are about to withdraw the following amount:</string>
    <string name="log_out">Log Out</string>
    <string name="overview">OverView</string>
    <string name="private_policy_overview">This privacy policy governs your use of Chama App for mobile devices that was created by Eclectics International. The Application is used to manage various financial aspects of group activities.</string>
    <string name="user_provided_information">User Provided Information</string>
    <string name="private_user_provided_information">The Application obtains the information you provide when you download and register the Application. Registration with us is optional. However, please keep in mind that you may not be able to use some of the features offered by the Application unless you register with us. When you register with us and use the Application, you generally provide (a) your name, email address, age, user name, password and other registration information; (b) transaction-related information, such as when you make purchases, respond to any offers, or download or use applications from us; (c) information you provide us when you contact us for help; (d) credit card information for purchase and use of the Application, and; (e) information you enter into our system when using the Application, such as contact information and project management information. We may also use the information you provided us to contact your from time to time to provide you with important information, required notices and marketing promotions.</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="log_out_yes">Yes</string>
    <string name="log_out_no">No</string>
    <string name="can_create">Can Create</string>
    <string name="can_view">Can View</string>
    <string name="can_delete">Can Delete</string>
    <string name="can_edit">Can Edit</string>
</resources>