<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/white_bg"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">




    <TextView
        android:id="@+id/tvDialogMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kyrial_sans_pro_light"
        android:text="@string/overview"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/onboarding_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDialogMessage2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/kyrial_sans_pro_light"
        android:text="@string/user_provided_information"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/kyrial_sans_pro_light"
        android:text="@string/private_policy_overview"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintStart_toStartOf="@+id/tvDialogMessage"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogMessage" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/kyrial_sans_pro_light"
        android:text="@string/private_user_provided_information"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogMessage2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
