<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/white_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/kyrial_sans_pro_black"
        android:text="@string/log_out"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/onboarding_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/tvDialogMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/kyrial_sans_pro_light"
        android:textColor="@color/colorBlack"
        android:text="@string/are_you_sure_you_want_to_log_out"
        android:textSize="@dimen/onboarding_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvDialogTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogTitle"
        android:layout_marginRight="32dp" />

    <TextView
        android:id="@+id/btnReject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/kyrial_sans_pro_light"
        android:padding="@dimen/normal_text_size"
        android:text="@string/log_out_no"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryMain"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintEnd_toStartOf="@+id/btnApprove"
        app:layout_constraintTop_toTopOf="@+id/btnApprove"
        android:layout_marginRight="8dp" />

    <Button
        android:id="@+id/btnApprove"
        style="@style/MaterialButtonDefaultStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/kyrial_sans_pro_light"
        android:padding="@dimen/normal_text_size"
        android:text="@string/log_out_yes"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintEnd_toEndOf="@+id/tvDialogMessage"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogMessage" />
</androidx.constraintlayout.widget.ConstraintLayout>
