<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.onboarding.LandingFragment"
    android:background="@drawable/blue_chama_background"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvActivityTitleLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/kyrial_sans_pro_light"
            android:text="@string/landing_activity_welcome_to"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/header_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/MaterialButtonLoginWhite"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="40dp"
            android:background="@color/colorWhite"
            android:text="@string/landing_page_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            style="@style/MaterialButtonWhite"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="40dp"
            android:text="@string/landing_activity_sign_up"
            app:backgroundTint="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:strokeColor="@color/colorWhite"

            app:strokeWidth="3dp"
            tools:layout_editor_absoluteX="40dp" />

        <TextView
            android:id="@+id/tvTermsOfUseLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:fontFamily="@font/kyrial_sans_pro_bold"
            android:text="@string/landing_activity_terms_label"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

        <TextView
            android:id="@+id/tvReadTermsOfUse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/landing_page_terms_of_use_prompt"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/small_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tvTermsOfUseLabel"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvTermsOfUseLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvTermsOfUseLabel" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="278dp"
            android:layout_height="84dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/chama_white_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvActivityTitleLogo" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
